# ersilia-mcp

./: .gitignore  .mcp.json  CLAUDE.md  DEVELOPMENT.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/ersilia_mcp/: __init__.py  catalog.py  server.py
src/ersilia_mcp/tools/: __init__.py  close.py  delete.py  fetch.py  predict.py  search.py  serve.py
src/ersilia_mcp/utils/: logging.py  model_operations.py  predict.py  search_api.py
tests/: test_catalog.py  test_catalog_integration.py  test_server.py
tests/integration/: test_fetch.py  test_model_lifecycle.py  test_search.py
tests/tools/: test_close.py  test_delete.py  test_fetch.py  test_predict.py  test_search.py  test_serve.py
tests/utils/: test_model_operations.py  test_predict.py  test_search_api.py
