[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ersilia-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for searching the Ersilia Model Hub"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name="Your Name", email="you@ersilia.io"}
]
requires-python = ">=3.10,<4.0"

dependencies = [
  "fastmcp==3.4.3",
  "rich==15.0.0",
  "ersilia==0.1.59",
  "requests==2.34.2",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "ruff==0.15.13",
]

[project.scripts]
ersilia-mcp = "ersilia_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: integration tests that call real APIs",
]
