[build-system]
requires = ["poetry-core==2.4.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "ersilia-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for searching, fetching, serving, and running Ersilia Model Hub models"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
  {name="Your Name", email="you@ersilia.io"}
]
requires-python = ">=3.10,<4.0"

dependencies = [
  "fastmcp==3.4.3",
  "rich==15.0.0",
  "ersilia==0.1.59",
  "requests==2.32.3",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "ruff==0.15.13",
]

[project.scripts]
ersilia-mcp = "ersilia_mcp.server:main"

[tool.poetry]
packages = [{ include = "ersilia_mcp", from = "src" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: integration tests that call real APIs",
]
